tests/samples/failing/03.mlang
fn add |a: i32, b: i32| $a + b$ : (i32, i32) -> i32;

// 引数が1つ足りない
let result add 10;
